# ua-acquirers-sdk-python-main

./: CHANGELOG.md  README.md  pyproject.toml  test_flow_manual.py
diia_client/: __init__.py  constants.py  enums.py  exceptions.py  models.py  types.py  utils.py
diia_client/crypto/: base_service.py
diia_client/crypto/uapki/: __init__.py  uapki.py
diia_client/sdk/: diia.py
diia_client/sdk/http/: base_client.py  requests.py
diia_client/sdk/model/: __init__.py  auth_deep_link.py  birth_certificate.py  decoded_file.py  document_package.py  driver_license.py  encoded_file.py  file.py  foreign_passport.py  hashed_file.py  internal_passport.py  metadata.py  reference_internally_displaced_person.py  signatures_package.py  taxpayer_card.py  vehicle_license.py
diia_client/sdk/remote/: diia_api.py
diia_client/sdk/remote/model/: __init__.py  branch.py  branch_list.py  branch_scopes.py  offer.py  offer_list.py  offer_scopes.py
diia_client/sdk/service/: base_service.py  branch_service.py  document_service.py  offer_service.py  session_token_service.py  sharing_service.py  sign_service.py  validation_service.py
examples/fast_api/: README.md  pyproject.toml
examples/fast_api/app/: app.py  config.py  main.py
examples/fast_api/app/lib/: auth.py  utils.py
examples/fast_api/app/routers/: api.py  index.py  views.py
examples/fast_api/app/templates/: _macros.jinja2  barcode.jinja2  base.jinja2  branches.jinja2  create_branch.jinja2  create_offer.jinja2  deeplink.jinja2  index.jinja2  offers.jinja2  sign_documents.jinja2
tests/: test_model_metadata.py
tests/data/: metadata_all.json  metadata_part.json
