[tool.poetry]
name = "diia_client"
packages = [ { include = "diia_client" } ]
version = "0.4.3"
description = "Diia SDK"
authors = [
    "Serhii Ivashchenko <s.ivashchenko@vchasno.ua>",
    "Oleksandr Kuzmenko <a.kuzmenko@vchasno.ua>",
]
classifiers = [
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS"
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^2.11.4"
requests = {version = "^2", optional = true}
types-requests = {version = "^2", optional = true}

[tool.poetry.extras]
requests = ["requests", "types-requests"]

[tool.poetry.group.dev.dependencies]
requests = {version = "^2", optional = false}
types-requests = {version = "^2", optional = false}
mypy = "^1.5"
pycodestyle = "^2.8.0"
isort = "^5.10.1"
pytest = "^7.1.1"
PyQRCode = {extras = ["png"], version = "^1.2.1"}
pydantic = "^2.0"
pyflakes = "^3.3.2"
flake8 = "^7.2.0"
black = "^25.1.0"

[tool.isort]
profile = "black"
indent = 4
multi_line_output = 3
line_length = 88
include_trailing_comma = true
use_parentheses = true
order_by_type = true
lines_after_imports = 2

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_untyped_calls = true
disallow_untyped_defs = true
follow_imports = "silent"
ignore_missing_imports = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests/"]
