[tool.poetry]
name = "diia_client_example"
packages = [ { include = "app" } ]
version = "0.1.0"
description = "Diia SDK FastAPI example"
authors = [
    "Serhii Ivashchenko <s.ivashchenko@vchasno.ua>",
    "Oleksandr Kuzmenko <a.kuzmenko@vchasno.ua>",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.7"
fastapi = {extras = ["jinja2"], version = "^0.75.1"}
uvicorn = {extras = ["standard"], version = "^0.17.6"}
python-multipart = "^0.0.5"
diia-client = {path = "../..", extras = ["requests"], develop = true}
pydantic = {extras = ["dotenv"], version = "^1.9.0"}
Jinja2 = "^3.1.1"
PyQRCode = {extras = ["png"], version = "^1.2.1"}
pypng = "^0.0.21"

[tool.poetry.group.dev.dependencies]
mypy = "^0.942"
pycodestyle = "^2.8.0"
flake8 = "^4.0.1"
pyflakes = "^2.4.0"
black = "^22.3.0"
isort = "^5.10.1"
pytest = "^7.1.1"

[tool.isort]
profile = "black"
indent = 4
multi_line_output = 3
line_length = 88
include_trailing_comma = true
use_parentheses = true
order_by_type = true
lines_after_imports = 2

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_untyped_calls = true
disallow_untyped_defs = true
follow_imports = "silent"
ignore_missing_imports = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
